--- a/frontend/src/modules/projects/templates/projectsSidebar.hbs
+++ b/frontend/src/modules/projects/templates/projectsSidebar.hbs
@@ -30,6 +30,16 @@
         </span>
       </button>
     </div>
+    {{#ifHasPermissions "{{tenantid}}/content/*:read"}}
+    <div class="sidebar-row">
+      <button class="projects-sidebar-all-courses">
+        <span class="projects-sidebar-all-courses-inner">
+          <i class="fa fa-chevron-right primary-color"/>
+          {{t 'app.allprojects'}}
+        </span>
+      </button>
+    </div>
+    {{/ifHasPermissions}}
 
     <div class="sidebar-search-tag">
       <div class="sidebar-row">
