used popup modal to handle all courses transfer on the usermanagement screen

--- a/frontend/src/modules/userManagement/templates/user.hbs
+++ b/frontend/src/modules/userManagement/templates/user.hbs
@@ -137,8 +137,7 @@
           {{#ifUserNotMe _id}}
             <div class="group">
               <hr>
-              <button class="btn alert edit-input transfer">{{t 'app.transferownershipto'}}</button>
-              <select class="transfer-ownership-select-field" data-transferfrom="{{ _id }}"></select>
+              <button class="btn alert edit-input transfer">{{t 'app.transferallcoursesownershipto'}}</button>
             </div>
           {{/ifUserNotMe}}
         </div>
