WIP added views and views handler for help dialog

--- a/frontend/src/modules/helpDialog/less/helpDialog.less
+++ b/frontend/src/modules/helpDialog/less/helpDialog.less
@@ -23,6 +23,7 @@
   background: #fff;
   box-shadow: none;
   color: #151515;
+  height: 200px;
   padding: 20px;
   -webkit-transition: all .3s;
   transition: all .3s;
