--- a/frontend/src/modules/helpDialog/templates/helpDialog.hbs
+++ b/frontend/src/modules/helpDialog/templates/helpDialog.hbs
@@ -5,7 +5,6 @@
     </div>
   </div>
   <div class="fab-message__content">
-    <h3>Questions? Technical difficulties?</h3>
-    <p>If you have any questions or are experiencing any technical difficulties, please contact our technical support team at: <a href="mailto:help@help.com">help@help.com</a></p>
+    <div class="help-dialog-content-wrapper"></div>
   </div>
 </div>
