WIP help dialog translation fixes and made the help dialog path consistent

--- a/frontend/src/modules/helpDialog/templates/typeOfIssue.hbs
+++ b/frontend/src/modules/helpDialog/templates/typeOfIssue.hbs
@@ -1,10 +1,17 @@
-<h3>{{{ helpDialogTitle }}}</h3>
-{{{ helpDialog }}}
+<div class="help-dialog-title">
+  <h3>{{{ helpDialogTitle }}}</h3>
+</div>
+
+<div class="hel-dialog-title">
+  {{{ helpDialog }}}
+</div>
+
 <div>
   <a class="next-view-link" data-help-dialog-next-view="TechnicalIssueView">
   {{ t 'app.helpdialog.technicalissue.text' }}
   </a> 
 </div>
+
 <div>
   <a class="next-view-link" data-help-dialog-next-view="AccessibilityIssueView">
     {{ t 'app.helpdialog.accessibilityissue.text' }}
