--- a/frontend/src/modules/helpDialog/templates/typeOfIssue.hbs
+++ b/frontend/src/modules/helpDialog/templates/typeOfIssue.hbs
@@ -6,14 +6,16 @@
   {{{ helpDialog }}}
 </div>
 
-<div>
-  <a class="next-view-link" data-help-dialog-next-view="TechnicalIssueView">
-  {{ t 'app.helpdialog.technicalissue.text' }}
-  </a> 
-</div>
+<ul class="help-dialog-choice-list">
+  <li>
+    <a class="next-view-link" data-help-dialog-next-view="TechnicalIssueView">
+    {{ t 'app.helpdialog.technicalissue.text' }}
+    </a> 
+  </li>
 
-<div>
-  <a class="next-view-link" data-help-dialog-next-view="AccessibilityIssueView">
-    {{ t 'app.helpdialog.accessibilityissue.text' }}
-  </a> 
-</div>
+  <li>
+    <a class="next-view-link" data-help-dialog-next-view="AccessibilityIssueView">
+      {{ t 'app.helpdialog.accessibilityissue.text' }}
+    </a> 
+  </li>
+</ul>
