--- a/frontend/src/modules/helpDialog/templates/platformIssue.hbs
+++ b/frontend/src/modules/helpDialog/templates/platformIssue.hbs
@@ -3,3 +3,7 @@
 <p>
   {{ t 'app.helpdialog.platformissue.text' }}
 </p>
+
+<div>
+  <button class="help-dialog-back-button action-primary">back</button>
+</div>
