--- a/frontend/src/modules/helpDialog/less/helpDialog.less
+++ b/frontend/src/modules/helpDialog/less/helpDialog.less
@@ -23,10 +23,10 @@
   background: #fff;
   box-shadow: none;
   color: #151515;
-  height: 200px;
-  padding: 20px;
+  height: auto;
+  padding: 30px;
   -webkit-transition: all .3s;
-  transition: all .3s;
+  transition: all 2s;
   color: #3f3f3f
 }
 
@@ -40,12 +40,9 @@
 }
 
 @media (min-width: 1400px) {
-  .fab-message__button {
-    margin-right: 50px
-  }
 
   .fab-message__content {
-    padding: 20px 200px
+    padding: 20px 30px
   }
 }
 
@@ -70,8 +67,8 @@
   right: 24px;
   bottom: 24px;
   background: #9C27B0;
-  width: 48px;
-  height: 48px;
+  width: 35px;
+  height: 35px;
   padding: 12px;
   z-index: 15;
   border-radius: 100%;
@@ -137,4 +134,27 @@
 
 a.at-button.toggle-icon {
   bottom: -20px
+}
+
+.help-dialog-inner-content {
+  font-size: 15px!important;
+  h3 {
+      margin-bottom: 15px;
+      font-size: 20px;
+  }
+
+  p {
+      margin-bottom: 10px;
+  }
+  ul.help-dialog-choice-list {
+    margin-bottom: 15px;
+    li {
+      list-style-type: none;
+      margin-left: 0;
+      margin-bottom: 5px;
+    }
+  }
+  .rep-selector-wrapper {
+    margin-bottom: 15px;
+  }
 }
