--- a/frontend/src/modules/helpDialog/templates/technicalIssue.hbs
+++ b/frontend/src/modules/helpDialog/templates/technicalIssue.hbs
@@ -5,14 +5,18 @@
 </p>
 
 <ul class="help-dialog-choice-list">
-  <li>
-    <a class="next-view-link" data-help-dialog-next-view="TechnicalIssueWithCourseView">
-    {{ t 'app.helpdialog.technicalissuewithcourse.text' }}
+ <li>
+    <a class="next-view-link" data-help-dialog-next-view="PlatformIssueView">
+      {{ t 'app.helpdialog.platformissue.link' }}
     </a> 
   </li>
   <li>
-    <a class="next-view-link" data-help-dialog-next-view="PlatformIssueView">
-      {{ t 'app.helpdialog.platformissue.text' }}
+    <a class="next-view-link" data-help-dialog-next-view="TechnicalIssueWithCourseView">
+    {{ t 'app.helpdialog.technicalissuewithcourse.link' }}
     </a> 
   </li>
 </ul>
+
+<div>
+  <button class="help-dialog-back-button action-primary">back</button>
+</div>
