--- a/frontend/src/modules/helpDialog/templates/typeOfIssue.hbs
+++ b/frontend/src/modules/helpDialog/templates/typeOfIssue.hbs
@@ -9,13 +9,13 @@
 <ul class="help-dialog-choice-list">
   <li>
     <a class="next-view-link" data-help-dialog-next-view="TechnicalIssueView">
-    {{ t 'app.helpdialog.technicalissue.text' }}
+    {{ t 'app.helpdialog.technicalissue.link' }}
     </a> 
   </li>
 
   <li>
     <a class="next-view-link" data-help-dialog-next-view="AccessibilityIssueView">
-      {{ t 'app.helpdialog.accessibilityissue.text' }}
+      {{ t 'app.helpdialog.accessibilityissue.link' }}
     </a> 
   </li>
 </ul>
