--- a/frontend/src/modules/helpDialog/templates/technicalIssueWithCourse.hbs
+++ b/frontend/src/modules/helpDialog/templates/technicalIssueWithCourse.hbs
@@ -12,9 +12,9 @@
     {{/each}}
   </select>
 </div>
-<p><em>You can click on your representative's name to send them a message</em></p>
+<p class="reps-texts display-none"><em>You can click on your representative's name to send them a message</em></p>
 <div class="help-dialog-technical-reps"></div>
-<p>Your representative was not able to answer your question? You can open a <a class="next-view-link" data-help-dialog-next-view="TechnicalIssueView">technical support ticket</a>.</p>
+<p class="reps-texts display-none">Your representative was not able to answer your question? You can open a <a class="next-view-link" data-help-dialog-next-view="PlatformIssueView">technical support ticket</a>.</p>
 <div>
   <button class="help-dialog-back-button action-primary">back</button>
 </div>
