added accessibility views and template and added logic for back button

--- a/frontend/src/modules/helpDialog/less/helpDialog.less
+++ b/frontend/src/modules/helpDialog/less/helpDialog.less
@@ -138,6 +138,7 @@ a.at-button.toggle-icon {
 
 .help-dialog-inner-content {
   font-size: 15px!important;
+  margin: 0 20%;
   h3 {
       margin-bottom: 15px;
       font-size: 20px;
