--- a/frontend/src/modules/helpDialog/templates/accessibilityIssue.hbs
+++ b/frontend/src/modules/helpDialog/templates/accessibilityIssue.hbs
@@ -1,7 +1,7 @@
 <h3>{{{ helpDialogTitle }}}</h3>
 
 <p>
-  {{ t 'app.helpdialog.technicalissue.text' }}
+  {{ t 'app.helpdialog.accessibilityissue.text' }}
 </p>
 
 <ul class="help-dialog-choice-list">
@@ -11,8 +11,8 @@
     </a> 
   </li>
   <li>
-    <a class="next-view-link" data-help-dialog-next-view="TechnicalIssueWithCourseView">
-    {{ t 'app.helpdialog.technicalissuewithcourse.link' }}
+    <a class="next-view-link" data-help-dialog-next-view="AccessibilityIssueWithCourseView">
+    {{ t 'app.helpdialog.accessibilityissuewithcourse.link' }}
     </a> 
   </li>
 </ul>
