added helpDialogEnabled field

--- a/frontend/src/plugins/helpDialog/less/helpDialogManagement.less
+++ b/frontend/src/plugins/helpDialog/less/helpDialogManagement.less
@@ -4,7 +4,7 @@
     color: @white;
 }
 
-[data-type="TextArea"], [data-type="Text"] {
+[data-type="TextArea"], [data-type="Text"], [data-type="Checkbox"] {
   margin-left: 20px;
 }
 
