--- a/frontend/src/modules/helpDialog/less/helpDialog.less
+++ b/frontend/src/modules/helpDialog/less/helpDialog.less
@@ -1,3 +1,5 @@
+@button-background-color:#9C27B0;
+
 /*Questions & Help Message*/
 .fab-message {
   position: fixed;
@@ -24,7 +26,6 @@
   box-shadow: none;
   color: #151515;
   height: auto;
-  padding: 30px;
   -webkit-transition: all .3s;
   transition: all 2s;
   color: #3f3f3f
@@ -36,14 +37,7 @@
 }
 
 .fab-message__content h3 {
-  color: #9C27B0;
-}
-
-@media (min-width: 1400px) {
-
-  .fab-message__content {
-    padding: 20px 30px
-  }
+  color: @button-background-color;
 }
 
 .fab-message.is-open {
@@ -66,7 +60,7 @@
   position: absolute;
   right: 24px;
   bottom: 24px;
-  background: #9C27B0;
+  background: @button-background-color;
   width: 35px;
   height: 35px;
   padding: 12px;
@@ -138,7 +132,7 @@ a.at-button.toggle-icon {
 
 .help-dialog-inner-content {
   font-size: 15px!important;
-  margin: 0 20%;
+  padding: 15px 0 15px 15px;
   h3 {
       margin-bottom: 15px;
       font-size: 20px;
@@ -159,3 +153,26 @@ a.at-button.toggle-icon {
     margin-bottom: 15px;
   }
 }
+
+.help-dialog-content-wrapper {
+  width: calc(75% - 250px);
+}
+
+.help-dialog-icon-wrapper {
+  width: 250px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .large-icon-question-mark {
+    background: @button-background-color;
+    padding: 25px;
+    border-radius: 100%;
+    -webkit-animation: at-ripple .6s linear infinite;
+    animation: at-ripple .6s linear infinite;
+  }
+}
+
+.help-dialog-main-wrapper {
+  display: flex;
+}
+
