fixed scaffold items text field margin issue

--- a/frontend/src/plugins/helpDialog/less/helpDialogManagement.less
+++ b/frontend/src/plugins/helpDialog/less/helpDialogManagement.less
@@ -4,8 +4,16 @@
     color: @white;
 }
 
-[data-type="TextArea"], [data-type="Text"], [data-type="Checkbox"] {
+[data-type="TextArea"], 
+[data-type="Text"], 
+[data-type="Checkbox"] {
   margin-left: 20px;
+}
+
+.scaffold-items-modal-body [data-type="TextArea"], 
+.scaffold-items-modal-body [data-type="Text"], 
+.scaffold-items-modal-body [data-type="Checkbox"] {
+  margin-left: 0;
 }
 
 .list-item {
