--- a/frontend/src/modules/helpDialog/templates/accessibilityIssueWithCourse.hbs
+++ b/frontend/src/modules/helpDialog/templates/accessibilityIssueWithCourse.hbs
@@ -13,8 +13,11 @@
   </select>
 </div>
 <p class="reps-texts display-none"><em>You can click on your representative's name to send them a message</em></p>
+<p class="no-reps-texts display-none"><em>{{ t 'app.heldialog.businessline.norepresentative' }}</em></p>
+
 <div class="help-dialog-accessibility-reps"></div>
-<p class="reps-texts display-none">Your representative was not able to answer your question? You can open a <a class="next-view-link" data-help-dialog-next-view="PlatformIssueView">technical support ticket</a>.</p>
+
+<p class="support-reps-texts display-none">Your representative was not able to answer your question? You can open an <a class="next-view-link" data-help-dialog-next-view="ComplianceIssueView">accessibility support ticket</a>.</p>
 <div>
   <button class="help-dialog-back-button action-primary" data-help-dialog-previous-view="AccessibilityIssueView">back</button>
 </div>
