--- a/frontend/src/plugins/helpDialog/templates/helpDialogManagement.hbs
+++ b/frontend/src/plugins/helpDialog/templates/helpDialogManagement.hbs
@@ -2,6 +2,7 @@
   <div class="error-text display-none">
       {{t 'app.fixerrors'}}
   </div>
-  <div class="help-dialog-inner form-container">
+  <div class="help-dialog-inner">
+    <div class="form-container"></div>
   </div>
 </div>
