--- a/frontend/src/modules/helpDialog/templates/platformIssue.hbs
+++ b/frontend/src/modules/helpDialog/templates/platformIssue.hbs
@@ -5,5 +5,5 @@
 </p>
 
 <div>
-  <button class="help-dialog-back-button action-primary">back</button>
+  <button class="help-dialog-back-button action-primary">{{ t 'app.back' }}</button>
 </div>
