--- a/frontend/src/modules/helpDialog/templates/technicalIssue.hbs
+++ b/frontend/src/modules/helpDialog/templates/technicalIssue.hbs
@@ -18,5 +18,5 @@
 </ul>
 
 <div>
-  <button class="help-dialog-back-button action-primary" data-help-dialog-previous-view="TypeOfIssueView">back</button>
+  <button class="help-dialog-back-button action-primary" data-help-dialog-previous-view="TypeOfIssueView">{{ t 'app.back' }}</button>
 </div>
