--- a/frontend/src/modules/helpDialog/templates/technicalIssueWithCourse.hbs
+++ b/frontend/src/modules/helpDialog/templates/technicalIssueWithCourse.hbs
@@ -12,12 +12,12 @@
     {{/each}}
   </select>
 </div>
-<p class="reps-texts display-none"><em>You can click on your representative's name to send them a message</em></p>
+<p class="reps-texts display-none"><em>{{ t 'app.heldialog.businessline.representative.helptext' }}</em></p>
 <p class="no-reps-texts display-none"><em>{{ t 'app.heldialog.businessline.norepresentative' }}</em></p>
 
 <div class="help-dialog-technical-reps"></div>
 
-<p class="support-reps-texts display-none">Your representative was not able to answer your question? You can open a <a class="next-view-link" data-help-dialog-next-view="PlatformIssueView">technical support ticket</a>.</p>
+<p class="support-reps-texts display-none">{{ t 'app.heldialog.issuewithcourse.support.helptext' }} <a class="next-view-link" data-help-dialog-next-view="PlatformIssueView">{{ t 'app.here' }}</a>.</p>
 <div>
-  <button class="help-dialog-back-button action-primary" data-help-dialog-previous-view="TechnicalIssueView">back</button>
+  <button class="help-dialog-back-button action-primary" data-help-dialog-previous-view="TechnicalIssueView">{{ t 'app.back' }}</button>
 </div>
