corrected help dialog translatable strings

--- a/frontend/src/modules/helpDialog/templates/technicalIssueWithCourse.hbs
+++ b/frontend/src/modules/helpDialog/templates/technicalIssueWithCourse.hbs
@@ -17,7 +17,7 @@
 
 <div class="help-dialog-technical-reps"></div>
 
-<p class="support-reps-texts display-none">{{ t 'app.heldialog.issuewithcourse.support.helptext' }} <a class="next-view-link" data-help-dialog-next-view="PlatformIssueView">{{ t 'app.here' }}</a>.</p>
+<p class="support-reps-texts display-none">{{{ td 'app.heldialog.issuewithcourse.support.helptext' '{"classname": "next-view-link", "nextview": "PlatformIssueView"}' }}}.</p>
 <div>
   <button class="help-dialog-back-button action-primary" data-help-dialog-previous-view="TechnicalIssueView">{{ t 'app.back' }}</button>
 </div>
