updated translations for help dialog

--- a/frontend/src/modules/helpDialog/templates/accessibilityIssue.hbs
+++ b/frontend/src/modules/helpDialog/templates/accessibilityIssue.hbs
@@ -1,22 +1,22 @@
 <h3>{{{ helpDialogTitle }}}</h3>
 
 <p>
-  {{ t 'app.helpdialog.accessibilityissue.text' }}
+  {{{ t 'app.helpdialog.accessibilityissue.text' }}}
 </p>
 
 <ul class="help-dialog-choice-list">
  <li>
     <a class="next-view-link" data-help-dialog-next-view="PlatformIssueView">
-      {{ t 'app.helpdialog.platformissue.link' }}
+      {{{ t 'app.helpdialog.platformissue.link' }}}
     </a> 
   </li>
   <li>
     <a class="next-view-link" data-help-dialog-next-view="AccessibilityIssueWithCourseView">
-    {{ t 'app.helpdialog.accessibilityissuewithcourse.link' }}
+    {{{ t 'app.helpdialog.accessibilityissuewithcourse.link' }}}
     </a> 
   </li>
 </ul>
 
 <div>
-  <button class="help-dialog-back-button action-primary" data-help-dialog-previous-view="TypeOfIssueView">{{ t 'app.back' }}</button>
+  <button class="help-dialog-back-button action-primary" data-help-dialog-previous-view="TypeOfIssueView">{{{ t 'app.back' }}}</button>
 </div>
