--- a/frontend/src/modules/helpDialog/templates/platformIssue.hbs
+++ b/frontend/src/modules/helpDialog/templates/platformIssue.hbs
@@ -1,7 +1,7 @@
 <h3>{{{ helpDialogTitle }}}</h3>
 
 <p>
-  <a href='{{ platformissuelink }}' target='_blank'>{{{ t 'app.helpdialog.platformissue.text' }}}</a>
+  {{{ t 'app.helpdialog.platformissue.text' }}}
 </p>
 
 <div>
