--- a/frontend/src/modules/helpDialog/templates/technicalIssue.hbs
+++ b/frontend/src/modules/helpDialog/templates/technicalIssue.hbs
@@ -1,18 +1,18 @@
 <h3>{{{ helpDialogTitle }}}</h3>
 
 <p>
-  {{ t 'app.helpdialog.technicalissue.text' }}
+  {{{ t 'app.helpdialog.technicalissue.text' }}}
 </p>
 
 <ul class="help-dialog-choice-list">
  <li>
     <a class="next-view-link" data-help-dialog-next-view="PlatformIssueView">
-      {{ t 'app.helpdialog.platformissue.link' }}
+      {{{ t 'app.helpdialog.platformissue.link' }}}
     </a> 
   </li>
   <li>
     <a class="next-view-link" data-help-dialog-next-view="TechnicalIssueWithCourseView">
-    {{ t 'app.helpdialog.technicalissuewithcourse.link' }}
+    {{{ t 'app.helpdialog.technicalissuewithcourse.link' }}}
     </a> 
   </li>
 </ul>
