--- a/frontend/src/modules/helpDialog/templates/complianceIssue.hbs
+++ b/frontend/src/modules/helpDialog/templates/complianceIssue.hbs
@@ -1,7 +1,7 @@
 <h3>{{{ helpDialogTitle }}}</h3>
 
 <p>
-  {{ t 'app.helpdialog.complianceissue.text' }}
+  {{{ t 'app.helpdialog.complianceissue.text' }}}
 </p>
 
 <div>
