added tools and docs views for help dialog

--- a/frontend/src/modules/helpDialog/templates/accessibilityIssueWithCourse.hbs
+++ b/frontend/src/modules/helpDialog/templates/accessibilityIssueWithCourse.hbs
@@ -17,7 +17,7 @@
 
 <div class="help-dialog-accessibility-reps"></div>
 
-<p class="support-reps-texts display-none">{{{ td 'app.heldialog.accessibilityissuewithcourse.support.helptext' '{"classname": "next-view-link", "nextview": "ComplianceIssueView"}' }}}.</p>
+<p class="support-reps-texts display-none">{{{ td 'app.heldialog.accessibilityissuewithcourse.support.helptext' '{"classname": "next-view-link", "nextview": "ComplianceIssueView"}' }}}</p>
 <div>
   <button class="help-dialog-back-button action-primary" data-help-dialog-previous-view="AccessibilityIssueView">{{ t 'app.back' }}</button>
 </div>
