--- a/frontend/src/modules/helpDialog/templates/accessibilityIssueWithCourse.hbs
+++ b/frontend/src/modules/helpDialog/templates/accessibilityIssueWithCourse.hbs
@@ -19,5 +19,5 @@
 
 <p class="support-reps-texts display-none">{{{ td 'app.heldialog.accessibilityissuewithcourse.support.helptext' '{"classname": "next-view-link", "nextview": "ComplianceIssueView"}' }}}</p>
 <div>
-  <button class="help-dialog-back-button action-primary" data-help-dialog-previous-view="AccessibilityIssueView">{{ t 'app.back' }}</button>
+  <button class="help-dialog-back-button action-primary" data-help-dialog-previous-view="AccessibilityToolsAndDocumentationsView">{{ t 'app.back' }}</button>
 </div>
