--- a/frontend/src/modules/helpDialog/templates/technicalIssueWithCourse.hbs
+++ b/frontend/src/modules/helpDialog/templates/technicalIssueWithCourse.hbs
@@ -19,5 +19,5 @@
 
 <p class="support-reps-texts display-none">{{{ td 'app.heldialog.technicalissuewithcourse.support.helptext' '{"classname": "next-view-link", "nextview": "PlatformIssueView"}' }}}</p>
 <div>
-  <button class="help-dialog-back-button action-primary" data-help-dialog-previous-view="TechnicalIssueView">{{ t 'app.back' }}</button>
+  <button class="help-dialog-back-button action-primary" data-help-dialog-previous-view="TechnicalToolsAndDocumentationsView">{{ t 'app.back' }}</button>
 </div>
