fixed help dialog css issue

--- a/frontend/src/plugins/helpDialog/less/helpDialogManagement.less
+++ b/frontend/src/plugins/helpDialog/less/helpDialogManagement.less
@@ -4,11 +4,14 @@
     color: @white;
 }
 
-[data-type="TextArea"], 
-[data-type="Text"], 
-[data-type="Checkbox"] {
-  margin-left: 20px;
+.help-dialog-inner {
+  [data-type="TextArea"], 
+  [data-type="Text"], 
+  [data-type="Checkbox"] {
+    margin-left: 20px;
+  }
 }
+
 
 .scaffold-items-modal-body [data-type="TextArea"], 
 .scaffold-items-modal-body [data-type="Text"], 
