added breadcrumbs for help dialog

--- a/frontend/src/plugins/helpDialog/less/helpDialog.less
+++ b/frontend/src/plugins/helpDialog/less/helpDialog.less
@@ -152,6 +152,23 @@ a.at-button.toggle-icon {
   .rep-selector-wrapper {
     margin-bottom: 15px;
   }
+  .breadcrumbs {
+    font-weight: 400;
+    margin-bottom: 7px;
+  }
+  .breadcrumbs .separator {
+    display: inline-block;
+    margin: 0 5px;
+    opacity: .35;
+    overflow: hidden;
+  }
+  .breadcrumbs .item {
+    display: inline-block;
+    max-width: 250px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+  }
 }
 
 .help-dialog-content-wrapper {
