--- a/frontend/src/plugins/helpDialog/templates/technicalIssue.hbs
+++ b/frontend/src/plugins/helpDialog/templates/technicalIssue.hbs
@@ -1,5 +1,15 @@
 <h3>{{{ helpDialogTitle }}}</h3>
 
+<div class="breadcrumbs">
+  <div class="item">
+    <a class="next-view-link" data-help-dialog-next-view="TypeOfIssueView">{{{ t 'app.typeofissue' }}}</a>
+  </div>
+  <div class="separator unselectable">&gt;</div>
+  <div class="item">
+    {{{ t 'app.helpdialog.technicalissue.link' }}}
+  </div>
+</div>
+
 <p>
   {{{ t 'app.helpdialog.technicalissue.text' }}}
 </p>
