--- a/frontend/src/plugins/helpDialog/templates/accessibilityToolsAndDocumentations.hbs
+++ b/frontend/src/plugins/helpDialog/templates/accessibilityToolsAndDocumentations.hbs
@@ -1,5 +1,19 @@
 <h3>{{{ helpDialogTitle }}}</h3>
 
+<div class="breadcrumbs">
+  <div class="item">
+    <a class="next-view-link" data-help-dialog-next-view="TypeOfIssueView">{{{ t 'app.typeofissue' }}}</a>
+  </div>
+  <div class="separator unselectable">&gt;</div>
+  <div class="item">
+    <a class="next-view-link" data-help-dialog-next-view="AccessibilityIssueView">{{{ t 'app.helpdialog.accessibilityissue.link' }}}</a>
+  </div>
+  <div class="separator unselectable">&gt;</div>
+  <div class="item">
+    {{{ t 'app.helpdialog.technicalissuewithcourse.link' }}}
+  </div>
+</div>
+
 <p>
   {{{ td 'app.heldialog.accessibility.toolsanddocumentations.text' '{"classname": "next-view-link", "nextview": "AccessibilityIssueWithCourseView"}' }}}
 </p>
