--- a/frontend/src/plugins/helpDialog/templates/complianceIssue.hbs
+++ b/frontend/src/plugins/helpDialog/templates/complianceIssue.hbs
@@ -1,5 +1,27 @@
 <h3>{{{ helpDialogTitle }}}</h3>
 
+<div class="breadcrumbs">
+  <div class="item">
+    <a class="next-view-link" data-help-dialog-next-view="TypeOfIssueView">{{{ t 'app.typeofissue' }}}</a>
+  </div>
+  <div class="separator unselectable">&gt;</div>
+  <div class="item">
+     <a class="next-view-link" data-help-dialog-next-view="AccessibilityIssueView">{{{ t 'app.helpdialog.accessibilityissue.link' }}}</a>
+  </div>
+  <div class="separator unselectable">&gt;</div>
+  <div class="item">
+    <a class="next-view-link" data-help-dialog-next-view="AccessibilityToolsAndDocumentationsView">{{{ t 'app.helpdialog.accessibilityissuewithcourse.link' }}}</a>
+  </div>
+  <div class="separator unselectable">&gt;</div>
+  <div class="item">
+    <a class="next-view-link" data-help-dialog-next-view="AccessibilityIssueWithCourseView">{{{ t 'app.representative' }}}</a>
+  </div>
+  <div class="separator unselectable">&gt;</div>
+  <div class="item">
+    Support
+  </div>
+</div>
+
 <p>
   {{{ t 'app.helpdialog.complianceissue.text' }}}
 </p>
