--- a/frontend/src/plugins/helpDialog/templates/accessibilityIssueWithCourse.hbs
+++ b/frontend/src/plugins/helpDialog/templates/accessibilityIssueWithCourse.hbs
@@ -1,29 +1,32 @@
 <h3>{{{ helpDialogTitle }}}</h3>
 
-<div class="breadcrumbs">
-  <div class="item">
-    <a class="next-view-link" data-help-dialog-next-view="TypeOfIssueView">{{{ t 'app.typeofissue' }}}</a>
-  </div>
-  <div class="separator unselectable">&gt;</div>
-  <div class="item">
-     <a class="next-view-link" data-help-dialog-next-view="AccessibilityIssueView">{{{ t 'app.helpdialog.accessibilityissue.link' }}}</a>
-  </div>
-  <div class="separator unselectable">&gt;</div>
-  <div class="item">
-    <a class="next-view-link" data-help-dialog-next-view="AccessibilityToolsAndDocumentationsView">{{{ t 'app.helpdialog.accessibilityissuewithcourse.link' }}}</a>
-  </div>
-  <div class="separator unselectable">&gt;</div>
-  <div class="item">
-    {{{ t 'app.representative' }}}
-  </div>
-</div>
+<nav aria-label="Breadcrumb" class="breadcrumbs">
+  <ol>
+    <li class="item">
+      <a href class="next-view-link" data-help-dialog-next-view="TypeOfIssueView">{{{ t 'app.typeofissue' }}}</a>
+    </li>
+    <div class="separator unselectable">&gt;</div>
+    <li class="item">
+      <a href class="next-view-link" data-help-dialog-next-view="AccessibilityIssueView">{{{ t 'app.helpdialog.accessibilityissue.link' }}}</a>
+    </li>
+    <div class="separator unselectable">&gt;</div>
+    <li class="item">
+      <a href class="next-view-link" data-help-dialog-next-view="AccessibilityToolsAndDocumentationsView">{{{ t 'app.helpdialog.accessibilityissuewithcourse.link' }}}</a>
+    </li>
+    <div class="separator unselectable">&gt;</div>
+    <li class="item">
+      <a href class="next-view-link" aria-current="page">{{{ t 'app.representative' }}}</a>
+    </li>
+  </ol>
+</nav>
 
 <p>
   {{{ t 'app.helpdialog.accessibilityissuewithcourse.text' }}}
 </p>
 
 <div class="rep-selector-wrapper">
-  <select class="business-line-select accessibility-business-line">
+  <label class="sr-only" for="help-dialog-accessibility-rep-selector">{{{ t 'app.selectrepresentativefromaccessibilityalliesnetwork' }}}</label>
+  <select id="help-dialog-accessibility-rep-selector" class="business-line-select accessibility-business-line">
     <option></option>
     {{#each properties._businessLines}}
       <option> {{ title }} </option>
