--- a/frontend/src/plugins/helpDialog/templates/complianceIssue.hbs
+++ b/frontend/src/plugins/helpDialog/templates/complianceIssue.hbs
@@ -1,26 +1,28 @@
 <h3>{{{ helpDialogTitle }}}</h3>
 
-<div class="breadcrumbs">
-  <div class="item">
-    <a class="next-view-link" data-help-dialog-next-view="TypeOfIssueView">{{{ t 'app.typeofissue' }}}</a>
-  </div>
-  <div class="separator unselectable">&gt;</div>
-  <div class="item">
-     <a class="next-view-link" data-help-dialog-next-view="AccessibilityIssueView">{{{ t 'app.helpdialog.accessibilityissue.link' }}}</a>
-  </div>
-  <div class="separator unselectable">&gt;</div>
-  <div class="item">
-    <a class="next-view-link" data-help-dialog-next-view="AccessibilityToolsAndDocumentationsView">{{{ t 'app.helpdialog.accessibilityissuewithcourse.link' }}}</a>
-  </div>
-  <div class="separator unselectable">&gt;</div>
-  <div class="item">
-    <a class="next-view-link" data-help-dialog-next-view="AccessibilityIssueWithCourseView">{{{ t 'app.representative' }}}</a>
-  </div>
-  <div class="separator unselectable">&gt;</div>
-  <div class="item">
-    Support
-  </div>
-</div>
+<nav aria-label="Breadcrumb" class="breadcrumbs">
+  <ol>
+    <li class="item">
+      <a href class="next-view-link" data-help-dialog-next-view="TypeOfIssueView">{{{ t 'app.typeofissue' }}}</a>
+    </li>
+    <div class="separator unselectable">&gt;</div>
+    <li class="item">
+      <a href class="next-view-link" data-help-dialog-next-view="AccessibilityIssueView">{{{ t 'app.helpdialog.accessibilityissue.link' }}}</a>
+    </li>
+    <div class="separator unselectable">&gt;</div>
+    <li class="item">
+      <a href class="next-view-link" data-help-dialog-next-view="AccessibilityToolsAndDocumentationsView">{{{ t 'app.helpdialog.accessibilityissuewithcourse.link' }}}</a>
+    </li>
+    <div class="separator unselectable">&gt;</div>
+    <li class="item">
+      <a href class="next-view-link" data-help-dialog-next-view="AccessibilityIssueWithCourseView">{{{ t 'app.representative' }}}</a>
+    </li>
+    <div class="separator unselectable">&gt;</div>
+    <li class="item">
+      <a href class="next-view-link" aria-current="page">Support</a>
+    </li>
+  </ol>
+</nav>
 
 <p>
   {{{ t 'app.helpdialog.complianceissue.text' }}}
