--- a/frontend/src/plugins/helpDialog/templates/technicalIssueWithCourse.hbs
+++ b/frontend/src/plugins/helpDialog/templates/technicalIssueWithCourse.hbs
@@ -1,29 +1,32 @@
 <h3>{{{ helpDialogTitle }}}</h3>
 
-<div class="breadcrumbs">
-  <div class="item">
-    <a class="next-view-link" data-help-dialog-next-view="TypeOfIssueView">{{{ t 'app.typeofissue' }}}</a>
-  </div>
-  <div class="separator unselectable">&gt;</div>
-  <div class="item">
-     <a class="next-view-link" data-help-dialog-next-view="TechnicalIssueView">{{{ t 'app.helpdialog.technicalissue.link' }}}</a>
-  </div>
-  <div class="separator unselectable">&gt;</div>
-  <div class="item">
-    <a class="next-view-link" data-help-dialog-next-view="TechnicalToolsAndDocumentationsView">{{{ t 'app.helpdialog.technicalissuewithcourse.link' }}}</a>
-  </div>
-  <div class="separator unselectable">&gt;</div>
-  <div class="item">
-    {{{ t 'app.representative' }}}
-  </div>
-</div>
+<nav aria-label="Breadcrumb" class="breadcrumbs">
+  <ol>
+    <li class="item">
+      <a href class="next-view-link" data-help-dialog-next-view="TypeOfIssueView">{{{ t 'app.typeofissue' }}}</a>
+    </li>
+    <div class="separator unselectable">&gt;</div>
+    <li class="item">
+      <a href class="next-view-link" data-help-dialog-next-view="TechnicalIssueView">{{{ t 'app.helpdialog.technicalissue.link' }}}</a>
+    </li>
+    <div class="separator unselectable">&gt;</div>
+    <li class="item">
+      <a href class="next-view-link" data-help-dialog-next-view="TechnicalToolsAndDocumentationsView">{{{ t 'app.helpdialog.technicalissuewithcourse.link' }}}</a>
+    </li>
+    <div class="separator unselectable">&gt;</div>
+    <li class="item">
+      <a href class="next-view-link" aria-current="page">{{{ t 'app.representative' }}}</a>
+    </li>
+  </ol>
+</nav>
 
 <p>
   {{{ t 'app.helpdialog.technicalissuewithcourse.text' }}}
 </p>
 
 <div class="rep-selector-wrapper">
-  <select class="business-line-select technical-business-line">
+  <label class="sr-only" for="help-dialog-technical-rep-selector">{{{ t 'app.selectrepresentativefromatpt' }}}</label>
+  <select id="help-dialog-technical-rep-selector" class="business-line-select technical-business-line">
     <option></option>
     {{#each properties._businessLines}}
       <option> {{ title }} </option>
