--- a/frontend/src/plugins/helpDialog/templates/accessibilityIssue.hbs
+++ b/frontend/src/plugins/helpDialog/templates/accessibilityIssue.hbs
@@ -1,11 +1,11 @@
 <h3>{{{ helpDialogTitle }}}</h3>
 
 <nav aria-label="Breadcrumb" class="breadcrumbs">
-  <ol>
+  <ol class="breadcrumbs-list">
     <li class="item">
       <a href class="next-view-link" data-help-dialog-next-view="TypeOfIssueView">{{{ t 'app.typeofissue' }}}</a>
     </li>
-    <div class="separator unselectable">&gt;</div>
+    <li aria-hidden="true" class="separator unselectable">&gt;</li>
     <li class="item">
       <a href class="next-view-link" aria-current="page">{{{ t 'app.helpdialog.accessibilityissue.link' }}}</a>
     </li>
