--- a/frontend/src/plugins/helpDialog/templates/typeOfIssue.hbs
+++ b/frontend/src/plugins/helpDialog/templates/typeOfIssue.hbs
@@ -3,7 +3,7 @@
 </div>
 
 <nav aria-label="Breadcrumb" class="breadcrumbs">
-  <ol>
+  <ol class="breadcrumbs-list">
     <li class="item">
       <a href class="next-view-link" aria-current="page">{{{ t 'app.typeofissue' }}}</a>
     </li>
