--- a/frontend/src/plugins/helpDialog/templates/complianceIssue.hbs
+++ b/frontend/src/plugins/helpDialog/templates/complianceIssue.hbs
@@ -1,23 +1,23 @@
 <h3>{{{ helpDialogTitle }}}</h3>
 
 <nav aria-label="Breadcrumb" class="breadcrumbs">
-  <ol>
+  <ol class="breadcrumbs-list">
     <li class="item">
       <a href class="next-view-link" data-help-dialog-next-view="TypeOfIssueView">{{{ t 'app.typeofissue' }}}</a>
     </li>
-    <div class="separator unselectable">&gt;</div>
+    <li aria-hidden="true" class="separator unselectable">&gt;</li>
     <li class="item">
       <a href class="next-view-link" data-help-dialog-next-view="AccessibilityIssueView">{{{ t 'app.helpdialog.accessibilityissue.link' }}}</a>
     </li>
-    <div class="separator unselectable">&gt;</div>
+    <li aria-hidden="true" class="separator unselectable">&gt;</li>
     <li class="item">
       <a href class="next-view-link" data-help-dialog-next-view="AccessibilityToolsAndDocumentationsView">{{{ t 'app.helpdialog.accessibilityissuewithcourse.link' }}}</a>
     </li>
-    <div class="separator unselectable">&gt;</div>
+    <li aria-hidden="true" class="separator unselectable">&gt;</li>
     <li class="item">
       <a href class="next-view-link" data-help-dialog-next-view="AccessibilityIssueWithCourseView">{{{ t 'app.representative' }}}</a>
     </li>
-    <div class="separator unselectable">&gt;</div>
+    <li aria-hidden="true" class="separator unselectable">&gt;</li>
     <li class="item">
       <a href class="next-view-link" aria-current="page">Support</a>
     </li>
