fixed the button focus order

--- a/frontend/src/plugins/helpDialog/less/helpDialog.less
+++ b/frontend/src/plugins/helpDialog/less/helpDialog.less
@@ -166,13 +166,10 @@ a.at-button.toggle-icon {
   .breadcrumbs {
     font-weight: 400;
     margin-bottom: 7px;
-  }
-  .breadcrumbs .breadcrumbs-list {
-    display: flex;
-    align-items: center;
+    padding: 5px 0;
   }
   .breadcrumbs .separator {
-    display: inline-block;
+    display: inline;
     margin: 0 5px;
     overflow: hidden;
   }
