more accessibility fixes for help dialog

--- a/frontend/src/plugins/helpDialog/less/helpDialog.less
+++ b/frontend/src/plugins/helpDialog/less/helpDialog.less
@@ -1,4 +1,4 @@
-@button-background-color:#9C27B0;
+@button-background-color:#cd1c69;
 
 /*Questions & Help Message*/
 .fab-message {
@@ -37,10 +37,6 @@
 .fab-message__content a {
   color: #0054a6;
   cursor: pointer;
-}
-
-.fab-message__content h3 {
-  color: @button-background-color;
 }
 
 .fab-message.is-open {
