--- a/frontend/src/plugins/helpDialog/templates/accessibilityIssueWithCourse.hbs
+++ b/frontend/src/plugins/helpDialog/templates/accessibilityIssueWithCourse.hbs
@@ -3,19 +3,19 @@
 <nav aria-label="Breadcrumb" class="breadcrumbs">
   <ol class="breadcrumbs-list">
     <li class="item">
-      <a href class="next-view-link" data-help-dialog-next-view="TypeOfIssueView">{{{ t 'app.typeofissue' }}}</a>
+      <a href="#TypeOfIssueView" class="next-view-link" data-help-dialog-next-view="TypeOfIssueView">{{{ t 'app.typeofissue' }}}</a>
     </li>
     <li aria-hidden="true" class="separator unselectable">&gt;</li>
     <li class="item">
-      <a href class="next-view-link" data-help-dialog-next-view="AccessibilityIssueView">{{{ t 'app.helpdialog.accessibilityissue.link' }}}</a>
+      <a href="#AccessibilityIssueView" class="next-view-link" data-help-dialog-next-view="AccessibilityIssueView">{{{ t 'app.helpdialog.accessibilityissue.link' }}}</a>
     </li>
     <li aria-hidden="true" class="separator unselectable">&gt;</li>
     <li class="item">
-      <a href class="next-view-link" data-help-dialog-next-view="AccessibilityToolsAndDocumentationsView">{{{ t 'app.helpdialog.accessibilityissuewithcourse.link' }}}</a>
+      <a href="#AccessibilityToolsAndDocumentationsView" class="next-view-link" data-help-dialog-next-view="AccessibilityToolsAndDocumentationsView">{{{ t 'app.helpdialog.accessibilityissuewithcourse.link' }}}</a>
     </li>
     <li aria-hidden="true" class="separator unselectable">&gt;</li>
     <li class="item">
-      <a href class="next-view-link" aria-current="page">{{{ t 'app.representative' }}}</a>
+      <a href="#AccessibilityIssueWithCourseView" class="next-view-link" aria-current="page">{{{ t 'app.representative' }}}</a>
     </li>
   </ol>
 </nav>
