--- a/frontend/src/plugins/helpDialog/templates/platformIssue.hbs
+++ b/frontend/src/plugins/helpDialog/templates/platformIssue.hbs
@@ -1,5 +1,26 @@
 <h3>{{{ helpDialogTitle }}}</h3>
 
+<nav aria-label="Breadcrumb" class="breadcrumbs">
+  <ol class="breadcrumbs-list">
+    <li class="item">
+      <a href="#TypeOfIssueView" class="next-view-link" data-help-dialog-next-view="TypeOfIssueView">{{{ t 'app.typeofissue' }}}</a>
+    </li>
+    <li aria-hidden="true" class="separator unselectable">&gt;</li>
+    <li class="item">
+    {{#ifValueEquals previousView "TechnicalIssueView"}}
+      <a href="#TechnicalIssueView" class="next-view-link" data-help-dialog-next-view="TechnicalIssueView">{{{ t 'app.helpdialog.technicalissue.link' }}}</a>
+    {{/ifValueEquals}}
+    {{#ifValueEquals previousView "AccessibilityIssueView"}}
+      <a href="#AccessibilityIssueView" class="next-view-link" data-help-dialog-next-view="AccessibilityIssueView">{{{ t 'app.helpdialog.accessibilityissue.link' }}}</a>
+    {{/ifValueEquals}}
+    </li>
+    <li aria-hidden="true" class="separator unselectable">&gt;</li>
+    <li class="item">
+      <a href="#Support" class="next-view-link" aria-current="page">Support</a>
+    </li>
+  </ol>
+</nav>
+
 <p>
   {{{ t 'app.helpdialog.platformissue.text' }}}
 </p>
