--- a/frontend/src/plugins/helpDialog/templates/typeOfIssue.hbs
+++ b/frontend/src/plugins/helpDialog/templates/typeOfIssue.hbs
@@ -5,7 +5,7 @@
 <nav aria-label="Breadcrumb" class="breadcrumbs">
   <ol class="breadcrumbs-list">
     <li class="item">
-      <a href class="next-view-link" aria-current="page">{{{ t 'app.typeofissue' }}}</a>
+      <a href="#TypeOfIssueView" class="next-view-link" aria-current="page">{{{ t 'app.typeofissue' }}}</a>
     </li>
   </ol>
 </nav>
