--- a/frontend/src/plugins/helpDialog/templates/accessibilityToolsAndDocumentations.hbs
+++ b/frontend/src/plugins/helpDialog/templates/accessibilityToolsAndDocumentations.hbs
@@ -3,15 +3,15 @@
 <nav aria-label="Breadcrumb" class="breadcrumbs">
   <ol class="breadcrumbs-list">
     <li class="item">
-      <a href class="next-view-link" data-help-dialog-next-view="TypeOfIssueView">{{{ t 'app.typeofissue' }}}</a>
+      <a href="#TypeOfIssueView" class="next-view-link" data-help-dialog-next-view="TypeOfIssueView">{{{ t 'app.typeofissue' }}}</a>
     </li>
     <li aria-hidden="true" class="separator unselectable">&gt;</li>
     <li class="item">
-      <a href class="next-view-link" data-help-dialog-next-view="AccessibilityIssueView">{{{ t 'app.helpdialog.accessibilityissue.link' }}}</a>
+      <a href="#AccessibilityIssueView" class="next-view-link" data-help-dialog-next-view="AccessibilityIssueView">{{{ t 'app.helpdialog.accessibilityissue.link' }}}</a>
     </li>
     <li aria-hidden="true" class="separator unselectable">&gt;</li>
     <li class="item">
-      <a href class="next-view-link" aria-current="page">{{{ t 'app.helpdialog.technicalissuewithcourse.link' }}}</a>
+      <a href="#AccessibilityToolsAndDocumentationsView" class="next-view-link" aria-current="page">{{{ t 'app.helpdialog.technicalissuewithcourse.link' }}}</a>
     </li>
   </ol>
 </nav>
