--- a/frontend/src/plugins/helpDialog/templates/technicalIssueWithCourse.hbs
+++ b/frontend/src/plugins/helpDialog/templates/technicalIssueWithCourse.hbs
@@ -3,19 +3,19 @@
 <nav aria-label="Breadcrumb" class="breadcrumbs">
   <ol class="breadcrumbs-list">
     <li class="item">
-      <a href class="next-view-link" data-help-dialog-next-view="TypeOfIssueView">{{{ t 'app.typeofissue' }}}</a>
+      <a href="#TypeOfIssueView" class="next-view-link" data-help-dialog-next-view="TypeOfIssueView">{{{ t 'app.typeofissue' }}}</a>
     </li>
     <div class="separator unselectable">&gt;</div>
     <li class="item">
-      <a href class="next-view-link" data-help-dialog-next-view="TechnicalIssueView">{{{ t 'app.helpdialog.technicalissue.link' }}}</a>
+      <a href="#TechnicalIssueView" class="next-view-link" data-help-dialog-next-view="TechnicalIssueView">{{{ t 'app.helpdialog.technicalissue.link' }}}</a>
     </li>
     <li aria-hidden="true" class="separator unselectable">&gt;</li>
     <li class="item">
-      <a href class="next-view-link" data-help-dialog-next-view="TechnicalToolsAndDocumentationsView">{{{ t 'app.helpdialog.technicalissuewithcourse.link' }}}</a>
+      <a href="#TechnicalToolsAndDocumentationsView" class="next-view-link" data-help-dialog-next-view="TechnicalToolsAndDocumentationsView">{{{ t 'app.helpdialog.technicalissuewithcourse.link' }}}</a>
     </li>
     <div class="separator unselectable">&gt;</div>
     <li class="item">
-      <a href class="next-view-link" aria-current="page">{{{ t 'app.representative' }}}</a>
+      <a href="TechnicalIssueWithCourseView" class="next-view-link" aria-current="page">{{{ t 'app.representative' }}}</a>
     </li>
   </ol>
 </nav>
