--- a/frontend/src/plugins/helpDialog/templates/accessibilityIssue.hbs
+++ b/frontend/src/plugins/helpDialog/templates/accessibilityIssue.hbs
@@ -18,12 +18,12 @@
 
 <ul class="help-dialog-choice-list">
  <li>
-    <a href class="next-view-link" data-help-dialog-next-view="PlatformIssueView">
-      {{{ t 'app.helpdialog.platformissue.link' }}}
+    <a href="#PlatformIssueView" class="next-view-link" data-help-dialog-next-view="PlatformIssueView">
+      {{{ t 'app.helpdialog.accessibility.platformissue.link' }}}
     </a> 
   </li>
   <li>
-    <a href class="next-view-link" data-help-dialog-next-view="AccessibilityToolsAndDocumentationsView">
+    <a href="#AccessibilityToolsAndDocumentationsView" class="next-view-link" data-help-dialog-next-view="AccessibilityToolsAndDocumentationsView">
     {{{ t 'app.helpdialog.accessibilityissuewithcourse.link' }}}
     </a> 
   </li>
