--- a/frontend/src/plugins/helpDialog/templates/technicalIssue.hbs
+++ b/frontend/src/plugins/helpDialog/templates/technicalIssue.hbs
@@ -18,12 +18,12 @@
 
 <ul class="help-dialog-choice-list">
  <li>
-    <a href class="next-view-link" data-help-dialog-next-view="PlatformIssueView">
-      {{{ t 'app.helpdialog.platformissue.link' }}}
+    <a href="#PlatformIssueView" class="next-view-link" data-help-dialog-next-view="PlatformIssueView">
+      {{{ t 'app.helpdialog.technical.platformissue.link' }}}
     </a> 
   </li>
   <li>
-    <a href class="next-view-link" data-help-dialog-next-view="TechnicalToolsAndDocumentationsView">
+    <a href="#TechnicalToolsAndDocumentationsView" class="next-view-link" data-help-dialog-next-view="TechnicalToolsAndDocumentationsView">
     {{{ t 'app.helpdialog.technicalissuewithcourse.link' }}}
     </a> 
   </li>
