--- a/frontend/src/plugins/helpDialog/templates/typeOfIssue.hbs
+++ b/frontend/src/plugins/helpDialog/templates/typeOfIssue.hbs
@@ -16,13 +16,13 @@
 
 <ul class="help-dialog-choice-list">
   <li>
-    <a href class="next-view-link" data-help-dialog-next-view="TechnicalIssueView">
+    <a href="#TechnicalIssueView" class="next-view-link" data-help-dialog-next-view="TechnicalIssueView">
     {{ t 'app.helpdialog.technicalissue.link' }}
     </a> 
   </li>
 
   <li>
-    <a href class="next-view-link" data-help-dialog-next-view="AccessibilityIssueView">
+    <a href="#AccessibilityIssueView" class="next-view-link" data-help-dialog-next-view="AccessibilityIssueView">
       {{ t 'app.helpdialog.accessibilityissue.link' }}
     </a> 
   </li>
