--- a/frontend/src/plugins/helpDialog/less/helpDialog.less
+++ b/frontend/src/plugins/helpDialog/less/helpDialog.less
@@ -1,4 +1,4 @@
-@button-background-color:#cd1c69;
+@button-background-color: #cd1c69;
 
 /*Questions & Help Message*/
 .fab-message {
@@ -74,8 +74,9 @@
   animation: at-ripple .6s linear infinite;
 }
 
-.at-button:focus-visible {
-  background: #d93df3;
+.at-button:focus-visible,
+.at-button:hover {
+  background: #a71655;
   outline: none;
 }
 
@@ -138,41 +139,49 @@ a.at-button.toggle-icon {
 }
 
 .help-dialog-inner-content {
-  font-size: 15px!important;
+  font-size: 15px !important;
   padding: 15px 0 15px 15px;
+
   h3 {
-      margin-bottom: 15px;
-      font-size: 20px;
+    margin-bottom: 15px;
+    font-size: 20px;
   }
 
   p {
-      margin-bottom: 10px;
+    margin-bottom: 10px;
   }
+
   ul.help-dialog-choice-list {
     margin-bottom: 15px;
+
     li {
       list-style-type: none;
       margin-left: 0;
       margin-bottom: 5px;
     }
   }
+
   .rep-selector-wrapper {
     margin-bottom: 15px;
   }
+
   .breadcrumbs {
     font-weight: 400;
     margin-bottom: 7px;
     padding: 5px 0;
   }
+
   .breadcrumbs .separator {
     display: inline;
     margin: 0 5px;
     overflow: hidden;
   }
+
   .breadcrumbs .item {
     display: inline-block;
     white-space: nowrap;
   }
+
   .breadcrumbs a[aria-current="page"] {
     pointer-events: none;
     text-decoration: none;
@@ -189,6 +198,7 @@ a.at-button.toggle-icon {
   display: flex;
   align-items: center;
   justify-content: center;
+
   .large-icon-question-mark {
     background: @button-background-color;
     padding: 25px;
@@ -202,7 +212,7 @@ a.at-button.toggle-icon {
   display: flex;
 }
 
-.form-container > form > div > fieldset {
+.form-container>form>div>fieldset {
   padding: 45px;
 }
 
