--- a/frontend/src/plugins/helpDialog/templates/helpDialog.hbs
+++ b/frontend/src/plugins/helpDialog/templates/helpDialog.hbs
@@ -1,12 +1,23 @@
 <div class="fab-message">
   <div class="fab-message__button">
-    <button id="help-dialog-at-button" aria-label="{{t 'app.helpdialog.button.label'}}" class="at-button">
-      <svg class="svg-question-mark" xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 24 24"><path fill="#FFFFFF"d="M19.3 7.2c0 1.7-.5 3.2-1.5 4.4-1 1.2-2.4 2-4.1 2.3v.1c0 .9-.2 1.6-.6 2.2-.4.7-1.1 1-1.9 1-1.6 0-2.4-1-2.4-2.9v-2c0-1.1.3-1.7 1-2.1.5-.1 1.3-.3 2.2-.6 1.2-.5 1.8-1.3 1.8-2.6 0-.6-.2-1.1-.7-1.5-.4-.4-1-.6-1.5-.6-1.1 0-2.2.6-3.2 1.8L4.7 3.6c.6-1.1 1.6-2 3.1-2.7 1.3-.6 2.6-.9 4-.9 2.1 0 3.9.7 5.4 2 1.4 1.3 2.1 3.1 2.1 5.2zm-5.2 14c0 .8-.3 1.4-.8 2-.6.5-1.2.8-2 .8s-1.5-.3-2-.8c-.6-.5-.8-1.2-.8-2s.3-1.5.8-2 1.2-.8 2-.8 1.4.3 2 .8c.5.5.8 1.2.8 2z"/></svg><svg class="svg-cross" xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 24 24"><path fill="#FFF" d="M24 2.5L21.5 0 12 9.5 2.5 0 0 2.5 9.5 12 0 21.5 2.5 24l9.5-9.5 9.5 9.5 2.5-2.5-9.5-9.5"/></svg>
+    <button id="fab-message-at-button" aria-label="{{t 'app.helpdialog.button.label'}}" class="at-button">
+      <svg class="svg-question-mark" xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 24 24">
+        <path fill="#FFFFFF"
+          d="M19.3 7.2c0 1.7-.5 3.2-1.5 4.4-1 1.2-2.4 2-4.1 2.3v.1c0 .9-.2 1.6-.6 2.2-.4.7-1.1 1-1.9 1-1.6 0-2.4-1-2.4-2.9v-2c0-1.1.3-1.7 1-2.1.5-.1 1.3-.3 2.2-.6 1.2-.5 1.8-1.3 1.8-2.6 0-.6-.2-1.1-.7-1.5-.4-.4-1-.6-1.5-.6-1.1 0-2.2.6-3.2 1.8L4.7 3.6c.6-1.1 1.6-2 3.1-2.7 1.3-.6 2.6-.9 4-.9 2.1 0 3.9.7 5.4 2 1.4 1.3 2.1 3.1 2.1 5.2zm-5.2 14c0 .8-.3 1.4-.8 2-.6.5-1.2.8-2 .8s-1.5-.3-2-.8c-.6-.5-.8-1.2-.8-2s.3-1.5.8-2 1.2-.8 2-.8 1.4.3 2 .8c.5.5.8 1.2.8 2z" />
+      </svg><svg class="svg-cross" xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 24 24">
+        <path fill="#FFF" d="M24 2.5L21.5 0 12 9.5 2.5 0 0 2.5 9.5 12 0 21.5 2.5 24l9.5-9.5 9.5 9.5 2.5-2.5-9.5-9.5" />
+      </svg>
     </button>
   </div>
   <div role="dialog" aria-live="assertive" aria-modal="true" class="fab-message__content display-none">
     <div class="help-dialog-main-wrapper">
-      <div class="help-dialog-icon-wrapper"><svg class="svg-question-mark large-icon-question-mark" xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24"><path fill="#FFFFFF" d="M19.3 7.2c0 1.7-.5 3.2-1.5 4.4-1 1.2-2.4 2-4.1 2.3v.1c0 .9-.2 1.6-.6 2.2-.4.7-1.1 1-1.9 1-1.6 0-2.4-1-2.4-2.9v-2c0-1.1.3-1.7 1-2.1.5-.1 1.3-.3 2.2-.6 1.2-.5 1.8-1.3 1.8-2.6 0-.6-.2-1.1-.7-1.5-.4-.4-1-.6-1.5-.6-1.1 0-2.2.6-3.2 1.8L4.7 3.6c.6-1.1 1.6-2 3.1-2.7 1.3-.6 2.6-.9 4-.9 2.1 0 3.9.7 5.4 2 1.4 1.3 2.1 3.1 2.1 5.2zm-5.2 14c0 .8-.3 1.4-.8 2-.6.5-1.2.8-2 .8s-1.5-.3-2-.8c-.6-.5-.8-1.2-.8-2s.3-1.5.8-2 1.2-.8 2-.8 1.4.3 2 .8c.5.5.8 1.2.8 2z"></path></svg></div><div class="help-dialog-content-wrapper"></div>
+      <div class="help-dialog-icon-wrapper"><svg class="svg-question-mark large-icon-question-mark"
+          xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24">
+          <path fill="#FFFFFF"
+            d="M19.3 7.2c0 1.7-.5 3.2-1.5 4.4-1 1.2-2.4 2-4.1 2.3v.1c0 .9-.2 1.6-.6 2.2-.4.7-1.1 1-1.9 1-1.6 0-2.4-1-2.4-2.9v-2c0-1.1.3-1.7 1-2.1.5-.1 1.3-.3 2.2-.6 1.2-.5 1.8-1.3 1.8-2.6 0-.6-.2-1.1-.7-1.5-.4-.4-1-.6-1.5-.6-1.1 0-2.2.6-3.2 1.8L4.7 3.6c.6-1.1 1.6-2 3.1-2.7 1.3-.6 2.6-.9 4-.9 2.1 0 3.9.7 5.4 2 1.4 1.3 2.1 3.1 2.1 5.2zm-5.2 14c0 .8-.3 1.4-.8 2-.6.5-1.2.8-2 .8s-1.5-.3-2-.8c-.6-.5-.8-1.2-.8-2s.3-1.5.8-2 1.2-.8 2-.8 1.4.3 2 .8c.5.5.8 1.2.8 2z">
+          </path>
+        </svg></div>
+      <div class="help-dialog-content-wrapper"></div>
     </div>
   </div>
 </div>
