--- a/frontend/src/modules/assetManagement/less/asset.less
+++ b/frontend/src/modules/assetManagement/less/asset.less
@@ -203,6 +203,18 @@
     }
 }
 
+.asset-hidden {
+    background: #46bebd;
+    color: #ffffff;
+    display: inline-block;
+    padding: 2.5px 10px;
+    margin-bottom: 5px;
+}
+
+.asset-creator {
+    margin-bottom: 5px;
+}
+
 .asset-preview-edit {
     .modal-popup & {
         display:none;
