fixed bypassblock ui issue

--- a/frontend/src/plugins/bypassblocks/less/bypassBlock.less
+++ b/frontend/src/plugins/bypassblocks/less/bypassBlock.less
@@ -4,8 +4,8 @@
 }
 
 .button--skip-link {
-    background-color: orange !important;
-    border-color: orange !important;
+    background-color: white !important;
+    border-color: white !important;
     outline-color: currentColor !important;
     color: black !important;
     font-weight: 600;
@@ -15,8 +15,7 @@
     z-index: 9999;
     left: 0;
     right: 0;
-    top: 0.5em;
-    width: 10em;
+    width: 15em;
     opacity: 1;
     transition: transform 0.1875s ease-out, opacity 0.1875s ease-out;
 }
