--- a/routes/index/index.hbs
+++ b/routes/index/index.hbs
@@ -30,7 +30,7 @@
   </head>
   <body>
     <div id="app" class="app container">
-      <div class="location-title">
+      <div tabindex="0" id="mainContent" class="location-title">
       </div>
       <div class="app-inner">
       </div>
