--- a/frontend/src/plugins/bypassblocks/templates/bypassBlock.hbs
+++ b/frontend/src/plugins/bypassblocks/templates/bypassBlock.hbs
@@ -1,2 +1,2 @@
-<a href="#contentPane-inner" class="bypass-block-btn button button--skip-link">{{{ t 'skip-to-main' }}}</a>
+<a href="#mainContent" class="bypass-block-btn button button--skip-link">{{{ t 'skip-to-main' }}}</a>
 <a href="#fab-message-at-button" class="bypass-block-btn button button--skip-link">{{{ t 'skip-to-help-dialog' }}}</a>
