fixed keyboard trap focus issue

--- a/frontend/src/plugins/helpDialog/templates/helpDialog.hbs
+++ b/frontend/src/plugins/helpDialog/templates/helpDialog.hbs
@@ -9,7 +9,7 @@
       </svg>
     </button>
   </div>
-  <div role="dialog" aria-live="assertive" aria-modal="true" class="fab-message__content display-none">
+  <div role="dialog" aria-live="assertive" aria-modal="true" class="fab-message__content trap-wrapper display-none">
     <div class="help-dialog-main-wrapper">
       <div class="help-dialog-icon-wrapper"><svg class="svg-question-mark large-icon-question-mark"
           xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24">
