added hide asset field to asset modal

--- a/frontend/src/modules/assetManagement/less/assetManagementModalTags.less
+++ b/frontend/src/modules/assetManagement/less/assetManagementModalTags.less
@@ -3,6 +3,10 @@
   z-index: 5;
 }
 
+.asset-management-modal-new-asset-inner .reg-form {
+    padding: 0;
+}
+
 .asset-management-modal-new-asset-inner .form-group.tags .selectize-control {
   @item-padding: 4px 7px;
 
