added eye-slash icon for hidden assets

--- a/frontend/src/modules/assetManagement/templates/assetManagementListItem.hbs
+++ b/frontend/src/modules/assetManagement/templates/assetManagementListItem.hbs
@@ -23,6 +23,10 @@
             {{#ifValueEquals assetType "other"}}
             <i class="fa fa-file-o"></i>
             {{/ifValueEquals}}
+
+            {{#if hideAsset}}
+            <i class="fa fa-eye-slash"></i>
+            {{/if}}
         </div>
     </div>
 
